@@ -4,7 +4,10 @@
  - Option to show group cover photos in page content
  - Add groups from content creator
  - Promote members to host
- -
+ - Set page background
+ - Set story background
+ - Page slideshow
+ - Improved Kiosk mode
 
 0.9.86
 ======
